--- a/assets/style.css
+++ b/assets/style.css
@@ -46,6 +46,10 @@
     background: linear-gradient(to right, #15141b, #1c1c27, #222231);
 }
 
+.cor_fundo_quarta_secao{
+    background-color: #3d4651;
+}
+
 .redes{
     margin-top: 50%;
 }
@@ -55,5 +59,70 @@
 }
 
 .aula{
-    min-height: 320px;
+    min-height: 280px;
+}
+
+.margin_form{
+    margin-top: 100px !important;
+    margin-bottom: 100px;
+    padding: 100px 15% 100px 0;
+}
+
+.imagem_fundo{
+    background-image: url("./images/img_opacity.png") !important;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+.inputs_form{
+    background-color: #3d4651;
+    border: none;
+    width: 150%;
+    padding: 10px 0 10px 0;
+}
+
+.btn_form{
+    background-color: #55549D;
+    border: none;
+    width: 150%;
+    padding: 10px 0 10px 0;
+}
+
+.btn_form:hover{
+    background-color: #6f6dd0;
+    color: white;
+    font-family: "Popins_Regular";
+}
+
+.btn_salvar{
+    background-color: #55549D;
+}
+
+.btn_salvar:hover{
+    background-color: #6f6dd0;
+    color: white;
+}
+
+.card_aula{
+    background-color: #3d4651;
+}
+
+@media (max-width: 768px) {
+    .margin_form {
+        padding: 100px 0 100px 0;
+    }
+
+    .inputs_form{
+        background-color: #3d4651;
+        border: none;
+        width: 100%;
+        padding: 10px 0 10px 0;
+    }
+
+    .btn_form{
+        background-color: #55549D;
+        border: none;
+        width: 100%;
+        padding: 10px 0 10px 0;
+    }
 }
