--- a/assets/style.css
+++ b/assets/style.css
@@ -13,6 +13,10 @@
     background: linear-gradient(to right, #16151b, #1d1c27, #222231)
 }
 
+#dropAula{
+    background: linear-gradient(to right, #16151b, #1d1c27, #222231)
+}
+
 .link_color{
     color: var(--primary_text_color);
     font-family: "Popins_Regular";
@@ -63,9 +67,13 @@
 }
 
 .margin_form{
-    margin-top: 100px !important;
+    margin-top: 70px !important;
+    padding: 100px 15% 0 0;
+}
+
+.margin{
     margin-bottom: 100px;
-    padding: 100px 15% 100px 0;
+    padding: 0 5% 0 0;
 }
 
 .imagem_fundo{
@@ -78,7 +86,18 @@
     background-color: #3d4651;
     border: none;
     width: 150%;
-    padding: 10px 0 10px 0;
+    padding: 10px 2px 0px 2px;
+    color: var(--primary_text_color);
+    font-family: "Popins_Regular";
+    font-size: 15px;
+}
+
+.form_nivel{
+    background-color: #3d4651;
+    border: none;
+    color: var(--primary_text_color);
+    font-family: "Popins_Regular";
+    font-size: 15px;
 }
 
 .btn_form{
@@ -86,6 +105,12 @@
     border: none;
     width: 150%;
     padding: 10px 0 10px 0;
+}
+
+.btn_cancelar{
+    width: 127%;
+    margin-top: -150px;
+    padding: 9px 0 9px 0;
 }
 
 .btn_form:hover{
@@ -113,7 +138,12 @@
 
 @media (max-width: 768px) {
     .margin_form {
-        padding: 100px 0 100px 0;
+        padding: 100px 0 0px 0;
+    }
+
+    .margin{
+        margin-bottom: 100px;
+        padding: 0 0 0 0;
     }
 
     .inputs_form{
@@ -128,5 +158,10 @@
         border: none;
         width: 100%;
         padding: 10px 0 10px 0;
+    }
+
+    .btn_cancelar{
+        width: 100%;
+        padding: 9px 0 9px 0;
     }
 }
